# axiplace

./: LICENSE  main.py  pyproject.toml  vercel.json
api/: TODO.md  app.py
api/frontend/: TODO.md  index.html
frontend/: TODO.md  index.html
rpi/: TODO.md  client.py  draw.py  stream.sh
server/: TODO.md  server.py  stream.py
