[project]
name = "axiplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "redis>=7.1.0",
    "requests>=2.32.5",
]
